Gateway/HTTPRoute/HttpRoute-graphql.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-graphql
  namespace: gateway
  annotations:
    cert-manager.io/issuer: kong-issuer
spec:
  parentRefs:
    - name: kong-gateway
  hostnames:
    - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /graphql
      backendRefs:
        - name: graphql-service
          namespace: graphql-namespace
          kind: Service
          port: 4000
