Gateway/HTTPRoute/HttpRoute-infrastructure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-infrastructure
  namespace: gateway
  annotations:
    cert-manager.io/issuer: kong-issuer
spec:
  parentRefs:
    - name: kong-gateway
      sectionName: https
  hostnames:
    - "cinephoria.lol"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cinema
        - path:
            type: PathPrefix
            value: /hall
        - path:
            type: PathPrefix
            value: /seat
        - path:
            type: PathPrefix
            value: /incident
      backendRefs:
        - name: infrastructure-nodejs-service
          namespace: infrastructure
          kind: Service
          port: 3005
