Gateway/HTTPRoute/HttpRoute-movie.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute-movie
  namespace: gateway
spec:
  parentRefs:
    - name: kong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /movie
      backendRefs:
        - name: movie-nodejs-service
          namespace: movie
          kind: Service
          port: 3002
