Gateway/HTTPRoute/HttpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-httproute
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: jwt-plugin
spec:
  parentRefs:
    - name: kong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /booking
      backendRefs:
        - name: booking-nodejs-service
          namespace: booking
          kind: Service
          port: 3001
    - matches:
        - path:
            type: PathPrefix
            value: /movie
      backendRefs:
        - name: movie-nodejs-service
          namespace: movie
          kind: Service
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /showtime
      backendRefs:
        - name: showtime-nodejs-service
          namespace: showtime
          kind: Service
          port: 3003
    - matches:
        - path:
            type: PathPrefix
            value: /user
      backendRefs:
        - name: user-nodejs-service
          namespace: user
          kind: Service
          port: 3004
